# RustEmbeddings

./: Cargo.toml  flake.nix  mutex_mapping
evdata/: Cargo.toml
evdata/src/: lib.rs
src/: evdev_handler.rs  lib.rs  lua_integration.rs  main.rs
