[package]
name = "lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
daemonize = "0.5.0"
evdev = "0.12.1"
lazy_static = "1.4.0"
# mlua = "0.9.6"
mlua = { version = "0.9.6", features = ["lua54", "async"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
threadpool = "1.8.1"
tokio = "1.36.0"
evdata = {path = "evdata"}
crossbeam = "0.8.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
