[package]
name = "embedRusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fastembed = "3.3.0"
qdrant-client = "1.8.0"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
